fix: Bump logback to 1.5.18, slf4j to 2.0.17, remove old log4j dependencies to resolve loggers conflicts. Maven-surefire-plugin configuration is added: mockito-core javaagent is set for tests.